@@ -83,9 +83,6 @@ compose.desktop {
             packageName = "com.crossevol.wordbook"
             packageVersion = "1.0.0"
 
-            // Explicitly include the java.logging module for jlink
-            jlinkArgs.add("--add-modules")
-            jlinkArgs.add("java.logging")
         }
     }
 }
